Shift game speed hotkeys to be 1, 2, 3. Task manager window moved to the left a bit so it's no longer blocked by the send bug button.

--- a/source/stonehearth_data/mods/stonehearth/ui/game/task_manager/task_manager.less
+++ b/source/stonehearth_data/mods/stonehearth/ui/game/task_manager/task_manager.less
@@ -70,7 +70,7 @@
       .outlined;
       position: absolute;
       bottom: 44px;
-      right: 10px;
+      right: 80px;
       display: none;
       font-size: 12px;
       text-align: left;
